--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "postinstall": "patch-package",
+    "doctor": "cd apps/mobile && EXPO_DOCTOR_SKIP_DEPENDENCY_VERSION_CHECK=1 npx expo-doctor"
   },
   "devDependencies": {
+    "patch-package": "^8.0.0",
     "prettier": "^3.7.4",
     "turbo": "^2.8.8",
     "typescript": "5.9.2"
