--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -14,7 +14,9 @@
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": { "supportsTablet": true },
+    "ios": {
+      "supportsTablet": true
+    },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -26,12 +28,19 @@
       "predictiveBackGestureEnabled": false,
       "package": "com.goldenflop.skr.goldenflop"
     },
-    "web": { "output": "static", "favicon": "./assets/images/favicon.png" },
+    "web": {
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
     "plugins": [
       "expo-router",
       [
         "expo-build-properties",
-        { "android": { "kotlinVersion": "2.1.0" } }
+        {
+          "android": {
+            "kotlinVersion": "2.1.0"
+          }
+        }
       ],
       [
         "expo-splash-screen",
@@ -40,10 +49,16 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
-          "dark": { "backgroundColor": "#000000" }
+          "dark": {
+            "backgroundColor": "#000000"
+          }
         }
-      ]
+      ],
+      "expo-font"
     ],
-    "experiments": { "typedRoutes": true, "reactCompiler": true }
+    "experiments": {
+      "typedRoutes": true,
+      "reactCompiler": true
+    }
   }
 }
