--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile",
-  "main": "expo-router/entry",
+  "main": "AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -21,6 +21,8 @@
     "@solana/web3.js": "^1.95.0",
     "buffer": "^6.0.3",
     "expo": "~54.0.33",
+    "expo-asset": "~12.0.12",
+    "expo-av": "~16.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
@@ -46,6 +48,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-track-player": "^4.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
