--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "postinstall": "patch-package",
-    "doctor": "cd apps/mobile && EXPO_DOCTOR_SKIP_DEPENDENCY_VERSION_CHECK=1 npx expo-doctor"
+    "doctor": "cd apps/mobile && EXPO_DOCTOR_SKIP_DEPENDENCY_VERSION_CHECK=1 npx expo-doctor",
+    "start": "cd apps/mobile && npx expo start"
   },
   "devDependencies": {
     "patch-package": "^8.0.0",
@@ -19,12 +20,13 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.3.8",
+  "packageManager": "npm@10.9.2",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "overrides": {
     "lightningcss": "1.30.1"
-  }
+  },
+  "main": "index.js"
 }
