--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,6 +22,7 @@
     "buffer": "^6.0.3",
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
+    "expo-audio": "^1.1.1",
     "expo-av": "~16.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.13",
