--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "overrides": {
     "lightningcss": "1.30.1"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "react-native-track-player": "^4.1.2"
+  }
 }
