--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
     "@goldenflop/shared": "*",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "ioredis": "^5.9.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   },
