--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc --outDir dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@goldenflop/shared": "*",
@@ -18,8 +21,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
+    "ioredis-mock": "^8.13.1",
+    "jest": "^30.2.0",
+    "socket.io-client": "^4.7.4",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.7.0",
     "typescript": "5.9.2"
   }
