--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -35,6 +35,8 @@
     },
     "plugins": [
       "expo-router",
+      "expo-av",
+      "expo-audio",
       [
         "expo-build-properties",
         {
