Spalash Screen changes

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.5",
+    "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.0",
+    "@wallet-ui/react-native-web3js": "^3.2.1",
     "buffer": "^6.0.3",
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
