--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,25 +8,43 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@goldenflop/shared": "*",
+    "@prisma/client": "^5.22.0",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.0",
+    "bs58": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.1",
     "ioredis": "^5.9.3",
+    "jsonwebtoken": "^9.0.3",
     "socket.io": "^4.7.4",
+    "tweetnacl": "^1.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
     "ioredis-mock": "^8.13.1",
     "jest": "^30.2.0",
+    "prisma": "^5.22.0",
     "socket.io-client": "^4.7.4",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
